update: false sharing 问题的探索, 对比 @Contented 和 手动 padding 的差异; 新的问题: 为什么在先开始执行时, 比较快, 后面几次比较慢? normal volatile: 1760ms [490, 439, 2225, 2261, 2288, 2237, 2332, 2189, 756, 2387] contented volatile: 676ms [238, 117, 766, 741, 904, 882, 912, 742, 727, 736] padding volatile: 607ms [107, 104, 744, 724, 733, 744, 731, 731, 723, 731]